Enhance expense jar category with name
