# server/src/main/resources/openapi.yml
@@ -287,6 +287,10 @@ components:
                 type: string
                 format: uuid
                 description: Unique identifier for the expense category.
+              categoryName:
+                type: string
+                example: Clothing
+                description: The expense category name.
               toAdd:
                 type: boolean
                 default: true
